syntax = "proto3";

option optimize_for = LITE_RUNTIME;
option go_package = "./pb";
//---------------说明---------------------------
//公用结构,
//----------------------------------------------

package pb;

enum Server{
	Gateway = 0;
	Account = 1;
	Game = 2;
	Center = 3;
	GM = 20;
	Robot = 21;
}

enum EPlatType {
	EPT_And = 0;	//安卓
	EPT_IOS = 1;	//苹果
	EPT_Web = 2;	//网页
}

//sdk
enum ESdkNumber{
	Guest = 0;					//游客
	Facebook = 1;				//facebook
	Google = 2;					//原生google
	Apple = 3;					//原生苹果
}

enum TypeComp{
	TCBase = 0;
	TCExample = 1;
	TCEmptyExample = 2;
}

//--------------奖励-----------------
enum EPrizeType{//奖励类型
	None = 0;
	Card = 1;	//卡
	Bottle = 2; //漂流瓶
	Good = 3;	//物品
}

message PrizeItem{
    EPrizeType Type = 1;		//物品类型
    string Oriname = 2;			//物品原始名
    sint64 Count = 3;		//物品数量
	float Rate = 4;	//倍率
    repeated sint32 Extra = 5;		//额外属性(与具体功能有关)
}

message PrizeItems{
	repeated PrizeItem Items = 1;
}

message PrizePoolData {
	EPrizeType Type = 1;	//物品类型
    string Oriname = 2;		//物品原始名
    sint64 Count = 3;		//物品数量
    uint32 TeShu = 4;		//特殊
    uint32 Ex = 5;			//特殊
    uint32 Rand = 6;		//特殊
}
